Add first 2 tests for InputMoveGeneratorUnitTests

--- a/src/TPPNameGenerator.BusinessLogic/TPPNameGenerator.BusinessLogic.csproj
+++ b/src/TPPNameGenerator.BusinessLogic/TPPNameGenerator.BusinessLogic.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TPPNameGenerator.Domain\TPPNameGenerator.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
