--- a/test/TPPNameGenerator.BusinessLogic.UnitTests/TPPNameGenerator.BusinessLogic.UnitTests.csproj
+++ b/test/TPPNameGenerator.BusinessLogic.UnitTests/TPPNameGenerator.BusinessLogic.UnitTests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\TPPNameGenerator.BusinessLogic\TPPNameGenerator.BusinessLogic.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
